# mimiclaw-lvgl

./: README.md  README_CN.md  sdkconfig.defaults.esp32s3  tmp_board_all.txt  todo_script_support.md
docs/: ARCHITECTURE.md  FEISHU_INTEGRATION.md
main/: CMakeLists.txt  mimi.c  mimi_config.h  mimi_secrets.h.example
main/agent/: agent_loop.c  context_builder.c  context_builder.h
main/audio/: audio_service.c  audio_service.h
main/bus/: message_bus.h
main/cli/: serial_cli.c
main/feishu/: feishu_bot.c  feishu_bot.h
main/llm/: llm_proxy.c  llm_proxy.h
main/memory/: memory_store.c  session_mgr.c
main/tools/: tool_registry.c  tool_web_fetch.c  tool_web_fetch.h  tool_web_search.c  tool_web_search.h
main/ui/: board_config.h  config_ui.c  config_ui.h  display_port.c  display_port.h  xpt2046.c  xpt2046.h
spiffs_data/config/: AGENTS.md
